Reports/Experiment_Data_Sat_Jan_20_15:42:32_UTC_2018/Performance_Results/exponentiation-operator/swift.txt
laptop//exponentiation-operator/swift/exponentiation-operator.swift:3:19: error: operator should no longer be declared with body; use a precedence group instead
infix operator ** { associativity left precedence 170 }
                  ^
laptop//exponentiation-operator/swift/exponentiation-operator.swift:10:6: warning: result of operator '**' is unused
        2017**12
        ~~~~^ ~~
laptop//exponentiation-operator/swift/exponentiation-operator.swift:11:7: warning: result of operator '**' is unused
        19.88**12
        ~~~~~^ ~~
laptop//exponentiation-operator/swift/exponentiation-operator.swift:9:5: warning: immutable value 'i' was never used; consider replacing with '_' or removing it
for i in 0...2000000000 {
    ^
    _

real	0m0.300s
user	0m0.046s
sys	0m0.059s
laptop//exponentiation-operator/swift/test.swift:8:20: warning: result of operator '+' is unused
        pwrInt(2017+i,12) + pwrDouble(19.88+Double(i),12)
        ~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

real	4m28.401s
user	4m27.743s
sys	0m0.045s
